--- a/.gitignore
+++ b/.gitignore
@@ -1,46 +1,25 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
-
-# compiled output
+# Angular build output
 /dist
-/tmp
-/out-tsc
-# Only exists if Bazel was run
-/bazel-out
+/.angular
+/coverage
 
-# dependencies
+# Node modules
 /node_modules
 
-# profiling files
-chrome-profiler-events*.json
-speed-measure-plugin*.json
+# Environment files
+.env
+.env.local
 
-# IDEs and editors
-/.idea
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
+# IDE settings
+.vscode/
+.idea/
 
-# IDE - VSCode
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-.history/*
-
-# misc
-/.sass-cache
-/connect.lock
-/coverage
-/libpeerconnection.log
-npm-debug.log
-yarn-error.log
-testem.log
-/typings
-
-# System Files
+# OS files
 .DS_Store
 Thumbs.db
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
